p2/confs/app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app-two
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: hashicorp/http-echo
          args:
            - "-text=Hello From App2!"
          ports:
            - containerPort: 5678
